# first-setup

./: .gitignore  README.md  first-setup.txt  meson.build  recipe.json
.github/workflows/: build.yml  continuousbuild.yml
data/: firstsetup.desktop  firstsetup.session  meson.build  org.yoyoos.FirstSetup.NewUser.desktop  org.yoyoos.FirstSetup.appdata.xml.in  org.yoyoos.FirstSetup.desktop.in  org.yoyoos.FirstSetup.gschema.xml
data/icons/: meson.build
debian/: changelog  control  copyright  yoyo-first-setup.install
po/: POTFILES  af.po  am.po  an.po  ar.po  ar_MA.po  arn.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fa_AF.po  fi.po  (+101 more)
yoyo_first_setup/: dialog.py  main.py  meson.build  window.py  yoyo-first-setup-processor.in  yoyo-first-setup.gresource.xml  yoyo-first-setup.in
yoyo_first_setup/defaults/: applications.py  conn_check.py  hostname.py  meson.build  theme.py  user.py  welcome.py
yoyo_first_setup/gtk/: default-conn-check.ui  default-hostname.ui  default-theme.ui  default-user.ui  default-welcome.ui  done.ui  layout-applications.ui  layout-preferences.ui  post-script.ui  progress.ui  tour.ui  window.ui
yoyo_first_setup/layouts/: meson.build  preferences.py  yes_no.py
yoyo_first_setup/utils/: builder.py  meson.build  processor.py  recipe.py
yoyo_first_setup/views/: done.py  meson.build  post_script.py  progress.py  tour.py
